--- a/libs/expression/Cargo.toml
+++ b/libs/expression/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 chrono = { version = "0.4.38", features = ["now", "arbitrary", "serde"] }
+polars = { version = "0.43.1", features = ["parquet", "fmt", "dtype-date", "dtype-datetime", "dtype-time", "dtype-duration", "dtype-struct", "lazy", "streaming", "dynamic_group_by"] }
 
 [dev-dependencies]
 proptest = "1.5.0"
